fix left align for desktop icons

--- a/main/components/IconSection/index.styl
+++ b/main/components/IconSection/index.styl
@@ -32,7 +32,7 @@ _darkGray = #636363
 
   +desktop()
     max-width 32u
-    margin 0 0 0 3u
+    margin 0
     padding 0
     justify-content space-between
 
@@ -52,7 +52,7 @@ _darkGray = #636363
       margin-top 5u
 
     +desktop()
-      margin-left 3u
+      margin-left 0
       margin-top 0
 
 .iconBorderWrapper
